Added style.css and made some other changes

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!-- Hello -->
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sabhi's Personal Site</title>
+        <title>Sabhi's Personal Site</title> 
+    
+        <link rel="stylesheet" href="css/styles.css">
+
     </head>
 
     <body>
         <table cellspacing="20">
             <tbody>
                 <tr>
-                    <td><img src="images/IMG20220612154115-modified.png" alt="sabhi profile picture" width="200" height="200"></td>
+                    <td><img src="images/sabhi.png" alt="sabhi profile picture"></td>
                     <td><h1>Sabhi Sharma</h1>
                         <p><em>Information Science Sophomore at <strong>The National Institute of Engineering</strong>.</em></p>
                         <p>I am an undergraduate currently studying at The National Institute of Engineering, Mysore</p></td>
@@ -23,8 +24,8 @@
         <hr>
         <h3>Education</h3>
         <ul>
-            <li>10+2, <a href="http://modelacademy.in/oldweb/">Model Academy, Jammu</a></li>
-            <li>B.E. in ISE, <a href="https://nie.ac.in/">The National Institute of Enginnering, Mysore</a></li>
+            <li>10 + 2 Model Institute of Education & Research</a></li>
+            <li>B. E. in Information Science & Engineering, N I E Mysore</a></li>
         </ul>
         <hr>
         <h3>Work Experience</h3>
@@ -61,15 +62,15 @@
                     <table>
                         <tr>
                             <td>Graphic Design</td>
-                            <td>⭐⭐⭐⭐</td>
+                            <td class="starhover">⭐⭐⭐⭐</td>
                         </tr>
                         <tr>
                             <td>Video Editing</td>
-                            <td>⭐⭐⭐</td>
+                            <td class="starhover">⭐⭐⭐</td>
                         </tr>
                         <tr>
                             <td>Programming in C/C++</td>
-                            <td>⭐⭐⭐</td>
+                            <td class="starhover">⭐⭐⭐</td>
                         </tr>
                     </table>
                 </td>
@@ -77,15 +78,15 @@
                     <table>
                         <tr>
                             <td>Git & GitHub</td>
-                            <td>⭐⭐⭐</td>
+                            <td class="starhover">⭐⭐⭐</td>
                         </tr>
                         <tr>
                             <td>Data Structures & Algorithms</td>
-                            <td>⭐⭐</td>
+                            <td class="starhover">⭐⭐</td>
                         </tr>
                         <tr>
-                            <td>Frontent Web Development</td>
-                            <td>⭐⭐</td>
+                            <td>Web Development</td>
+                            <td class="starhover">⭐⭐</td>
                         </tr>
                     </table>
                 </td>
