--- a/hobbies.html
+++ b/hobbies.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
     <h3>My Hobbies</h3>
     <ol>
-      <li><a href="images/20210903_165610.jpg">Adventure!</a></li>
+      <li><a href="images/20210903_165610.jpg" download="myphoto">Adventure!</a></li>
       <li><a href="images/358.jpg">Gyming</a></li>
       <li><a href="images/Atomic Habits.jpg">Reading</a></li>
     </ol>
